--- a/index.html
+++ b/index.html
@@ -8,112 +8,25 @@
   crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/login.css">
 
-<body class="text-center">
+<body>
+<div id="g_id_onload"
+     data-client_id="owdry"
+     data-context="signin"
+     data-ux_mode="redirect"
+     data-login_uri="https://owdry.ml"
+     data-nonce=""
+     data-itp_support="true">
+</div>
 
-<main class="form-signin">
-
-	<img class="mb-4" src="assets/images/JimeCoding.jpg" id="user_image" alt="" width="100" height="100">
-    <h1 class="h3 mb-3 fw-normal" id="user_name">Acceso</h1>
-
-    <button onclick="loginWithGoogle()" class="w-100 btn btn-lg btn-primary" id="login_btn">Iniciar con Google</button>
-
-    <button onclick="logout()" style="display: none;" class="w-100 btn btn-lg btn-danger" id="logout_btn">Salir</button>
-</main>
-
-  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
-
-  <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
-  <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-analytics.js"></script>
-
-  <!-- Add Firebase products that you want to use -->
-  <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
-
-
-  <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.16.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.16.0/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyB7cxcThRYhGQcCwOGxHWmbS-2ojFt_7lo",
-    authDomain: "owdry-login.firebaseapp.com",
-    projectId: "owdry-login",
-    storageBucket: "owdry-login.appspot.com",
-    messagingSenderId: "15897690136",
-    appId: "1:15897690136:web:ae6d3589c9129bd0e1836d",
-    measurementId: "G-81WR0KY7T0"
-    databaseURL: "https://owdry-login.firebaseio.com",
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-</script>
-
-  <script type="text/javascript">
-    //variables
-    var login_btn     = document.getElementById("login_btn"),
-      logout_btn      = document.getElementById("logout_btn"),
-      user_image      = document.getElementById("user_image"),
-      user_name_h1    = document.getElementById("user_name");
-
-    //iniciar con Google
-    var loginWithGoogle = function(){
-
-      var provider = new firebase.auth.GoogleAuthProvider();
-      firebase.auth().signInWithPopup(provider).then(function(result) {
-      // This gives you a Google Access Token. You can use it to access the Google API.
-      var token = result.credential.accessToken;
-      // The signed-in user info.
-      var user = result.user;
-
-      console.log(user.displayName);
-      updateUser(user);
-      // ...
-    }).catch(function(error) {
-      // Handle Errors here.
-      var errorCode = error.code;
-      var errorMessage = error.message;
-      // The email of the user's account used.
-      var email = error.email;
-      // The firebase.auth.AuthCredential type that was used.
-      var credential = error.credential;
-      // ...
-
-      console.log(errorMessage);
-    });
-    }
-
-    //agregar datos del usuario
-    var updateUser = function(user){
-      user_name_h1.innerHTML = "Hola, " + user.displayName;
-      user_image.src = user.photoURL;
-
-      login_btn.style.display = "none";
-      logout_btn.style.display = "inline-block";
-    }
-
-    var logout = function(){
-      firebase.auth().signOut().then(function() {
-        user_name_h1.innerHTML = "Acceso";
-        user_image.src = "assets/images/JimeCoding.jpg";
-        login_btn.style.display = "inline-block";
-        logout_btn.style.display = "none";
-
-    }).catch(function(error) {
-      // An error happened.
-    });
-
-    }
-
-
-  </script>
+<div class="g_id_signin"
+     data-type="standard"
+     data-shape="rectangular"
+     data-theme="outline"
+     data-text="signin_with"
+     data-size="large"
+     data-locale="es-419"
+     data-logo_alignment="left">
+</div>
 
 </body>
 </html>
