--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <script type="text/javascript"> 
        // Enter an API key from the Google API Console: 
        //   https://console.developers.google.com/apis/credentials 
-       var apiKey = 'YOUR_API_KEY'; 
+       var apiKey = 'AIzaSyB7cxcThRYhGQcCwOGxHWmbS-2ojFt_7lo'; 
   
        // Enter the API Discovery Docs that describes the APIs you want to 
        // access. In this example, we are accessing the People API, so we load 
@@ -24,10 +24,10 @@
        var discoveryDocs = ["https://people.googleapis.com/$discovery/rest?version=v1"]; 
   
        // Enter a client ID for a web application from the Google API Console: 
-       //   https://console.developers.google.com/apis/credentials?project=_ 
+       //   https://console.developers.google.com/apis/credentials?project=owdry
        // In your API Console project, add a JavaScript origin that corresponds 
        //   to the domain where you will be running the script. 
-       var clientId = 'YOUR_WEB_CLIENT_ID.apps.googleusercontent.com'; 
+       var clientId = 'owdry.apps.googleusercontent.com'; 
   
        // Enter one or more authorization scopes. Refer to the documentation for 
        // the API or https://developers.google.com/people/v1/how-tos/authorizing 
